@@ -1,6 +1,9 @@
 0.4.3
 Add Deep.hs
 
+Move toLabel to another class to allow it to return Labels with
+kinds other than Symbol.
+
 22 Dec 2015
 0.4.2 Release
 
